Add puppeteer-extra stealth to bypass Cloudflare

--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "puppeteer": "^22.0.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "@supabase/supabase-js": "^2.39.0"
-  },
+},
   "devDependencies": {
     "typescript": "^5.3.0",
     "ts-node": "^10.9.0",
